--- a/themes/indigo-card/source/css/_partial/fontawesome.less
+++ b/themes/indigo-card/source/css/_partial/fontawesome.less
@@ -371,6 +371,9 @@
 @fa-var-github: "\f09b";
 @fa-var-github-alt: "\f113";
 @fa-var-github-square: "\f092";
+@fa-var-hr: "\f02c";
+@fa-var-job: "\f0b1";
+@fa-var-about: "\f007";
 @fa-var-gitlab: "\f296";
 @fa-var-gittip: "\f184";
 @fa-var-glass: "\f000";
@@ -995,6 +998,9 @@
 .@{fa-css-prefix}-sign-in:before { content: @fa-var-sign-in; }
 .@{fa-css-prefix}-trophy:before { content: @fa-var-trophy; }
 .@{fa-css-prefix}-github-square:before { content: @fa-var-github-square; }
+.@{fa-css-prefix}-hr:before { content: @fa-var-hr; }
+.@{fa-css-prefix}-job:before { content: @fa-var-job; }
+.@{fa-css-prefix}-about:before { content: @fa-var-about; }
 .@{fa-css-prefix}-upload:before { content: @fa-var-upload; }
 .@{fa-css-prefix}-lemon-o:before { content: @fa-var-lemon-o; }
 .@{fa-css-prefix}-phone:before { content: @fa-var-phone; }
