--- a/themes/indigo-card/source/css/_partial/fontawesome.less
+++ b/themes/indigo-card/source/css/_partial/fontawesome.less
@@ -416,6 +416,7 @@
 @fa-var-heartbeat: "\f21e";
 @fa-var-history: "\f1da";
 @fa-var-home: "\f015";
+@fa-var-works: "\f0f6";
 @fa-var-hospital-o: "\f0f8";
 @fa-var-hotel: "\f236";
 @fa-var-hourglass: "\f254";
@@ -872,6 +873,7 @@
 .@{fa-css-prefix}-cog:before { content: @fa-var-cog; }
 .@{fa-css-prefix}-trash-o:before { content: @fa-var-trash-o; }
 .@{fa-css-prefix}-home:before { content: @fa-var-home; }
+.@{fa-css-prefix}-works:before { content: @fa-var-works; }
 .@{fa-css-prefix}-file-o:before { content: @fa-var-file-o; }
 .@{fa-css-prefix}-clock-o:before { content: @fa-var-clock-o; }
 .@{fa-css-prefix}-road:before { content: @fa-var-road; }
