--- a/themes/indigo-card/layout/_partial/plugins/gentie.ejs
+++ b/themes/indigo-card/layout/_partial/plugins/gentie.ejs
@@ -1,5 +1,6 @@
 <% if (theme.gentie){ %>
 <div id="cloud-tie-wrapper" class="cloud-tie-wrapper"></div>
+<script src="https://img1.cache.netease.com/f2e/tie/yun/sdk/loader.js"></script>
 <script>
   var cloudTieConfig = {
     url: document.location.href,
@@ -7,6 +8,7 @@
     productKey: "<%- theme.gentie %>",
     target: "cloud-tie-wrapper"
   };
+  var yunManualLoad = true;
+  Tie.loader("aHR0cHM6Ly9hcGkuZ2VudGllLjE2My5jb20vcGMvbGl2ZXNjcmlwdC5odG1s", true);
 </script>
-<script src="https://img1.cache.netease.com/f2e/tie/yun/sdk/loader.js"></script>
 <% } %>
